add keySet(), values(), entrySet() logged impl